# my_logic_example

./: .gitignore  README.md
babylon-js-learning/: README.md  common.css  index.html
babylon-js-learning/step01-hello-world/: index.html
babylon-js-learning/step02-basic-shapes/: index.html
babylon-js-learning/step03-materials/: index.html
cad-viewer/: Makefile  README.md  go.mod  go.sum  main.go
chrome_dev_tool/: .gitignore  Makefile  README.md  go.mod  main.go  requirements.md
chrome_dev_tool_remote/: .env.example  .gitignore  main.py  pyproject.toml
chrome_dev_tool_remote/chrome_logs/: __init__.py  client.py  collector.py  db.py  tunnel.py
chrome_remote_devtools/: cdp-cli.js  cdp-playwright.js  cdp-raw.js  package-lock.json  package.json
ddd-diagram-generator/: .gitignore  README.md
ddd-ui-designer/: .gitignore  MANUAL.md  README.md
docs/: ai-integration-strategies.md  ai-integration-strategies.slides.html  ai-integration-strategies.slides.md
exporters/poc/mac/rust-exporter/: .gitignore  Cargo.toml  README.md  start.sh
exporters/poc/mac/rust-exporter/src/: collector.rs  main.rs
jd-go/: .gitignore  Makefile  go.mod  go.sum  main.go
jira_db_sync/: .env.example  .gitignore  main.py  marimo_main.py  pyproject.toml  test_sync.py
jira_db_sync/.claude/skills/duckdb/: SKILL.md
jira_db_sync/.claude/skills/marimo/: SKILL.md
jira_db_sync/jira_sync/: __init__.py  client.py  db.py  fields.py  history.py  sync.py  transform.py
m_exporter/poc/mini-prometheus/rust/: .gitignore  Cargo.toml  README.md  config.toml  start.sh  stop.sh
m_exporter/poc/mini-prometheus/rust/src/: api.rs  config.rs  main.rs  parser.rs  scrape.rs  storage.rs  web.rs
m_exporter/poc/mini-prometheus/rust/src/promql/: mod.rs
pcap-go/: .gitignore  ARCHITECTURE.md  Makefile  README.md  go.mod  go.sum  main.go
perf-investigator/: .gitignore  Makefile  README.md  go.mod  go.sum
polling-app/: package-lock.json  package.json
react-calendar-poc/: README.md  index.html  package-lock.json  package.json
stock-price-viewer/: README.md  app.py  pyproject.toml  sample-app.py
ticket-manager/: .gitignore  Makefile  README.md
ui-builder/: .gitignore  README.md
webcam-go/: .gitignore  ARCHITECTURE.md  Makefile  README.md  go.mod  go.sum  main.go
youtube_list/: .env.example  main.py  pyproject.toml
youtube_list/youtube_sync/: __init__.py  client.py  db.py  sync.py  transcript.py  transform.py
(+545 files in other folders)
