[project]
name = "jira-db-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.21.1",
    "requests>=2.31.0",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
    "altair>=5.2.0",
    "python-dotenv>=1.0.0",
    "sqlglot>=30.0.3",
]
