[package]
name = "mac-exporter-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
prometheus-client = "0.22"
sysinfo = "0.32"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
humantime-serde = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
